# markdown-app

./: .prettierrc.yaml  LICENSE  README.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.husky/: pre-commit
res/styles/: globals.scss  index.scss  markdown.module.scss
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: EditorPanel.tsx  PreviewPanel.tsx
